test/compare/sources/errors/bad-switch3.go
//+build ignore

package main

func main() {
	switch i := 0; i.(type) {
	}
}
